[tool.poetry]
name = "codedog"
version = "0.11.0"
license = "MIT"
readme = "README.md"
authors = ["Arcadia <arcadia822@gmail.com>", "Linpp "]
description = "Codedog reviews your pull request using llm."
repository = "https://www.github.com/codedog-ai/codedog"
homepage = "https://www.codedog.ai"
keywords = ["code review", "langchain", "llm"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/codedog-ai/codedog/issues"
"Discord" = "https://discord.gg/8TfqpFC4"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.21"
openai = "^1.37.1"
python-gitlab = ">=3.14,<5.0"
pygithub = ">=1.58.2,<3.0.0"
unidiff = "^0.7.5"
annotated-types = "^0.7.0"
pydantic = "^2.8.2"
pydantic-core = "^2.20.1"
h11 = "^0.14.0"
distro = "^1.9.0"
langchain-community = "^0.3.20"
langchain-openai = "^0.3.11"
requests = "^2.31.0"
aiohttp = "^3.9.3"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = ">=23.3,<25.0"
flake8 = ">=6,<8"
isort = "^5.12.0"
python-semantic-release = "^8.0.5"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest-asyncio = ">=0.20.3,<0.22.0"
pytest-cov = ">=4,<6"

[tool.poetry.group.http]
optional = true

[tool.poetry.group.http.dependencies]
fastapi = ">=0.100.1,<0.112.0"
uvicorn = ">=0.23.1,<0.30.0"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
pdoc = "^14.0.0"

[tool.poetry.scripts]


# [[tool.poetry.source]]
# name = "PyPI"
# priority = "default"

# [[tool.poetry.source]]
# name = "tsinghua"
# url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
# priority = "primary"

[tool.semantic_release]
branch = "master"
build_command = "poetry build"
commit_message = 'chore(release): release version v{version}'
version_variables = ["codedog/version.py:VERSION"]
version_toml = ["pyproject.toml:tool.poetry.version"]

[tool.semantic_release.remote]
ignore_token_for_push = true

[tool.semantic_release.publish]
upload_to_vcs_release = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
